--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -1,24 +1,1 @@
-:root {
-  --colorRed: #FF6060;
-  --colorWhite: #fff;
-}
-
-.gallery-container {
-  position: relative;
-  background-color: #F6F6F6;
-  padding: 40px 0;
-  /* Espace autour de la galerie */
-  display: flex;
-  justify-content: center;
-  /* Centre la galerie horizontalement */
-  margin: 1.5rem;
-  border-radius: 25px;
-}
-.gallery-container .logements-gallery {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 50px;
-  max-width: 1200px;
-  width: 100%;
-  padding: 15px;
-}/*# sourceMappingURL=home.css.map */
+:root{--colorRed: #FF6060;--colorWhite: #fff}.gallery-container{position:relative;background-color:#f6f6f6;padding:40px 0;display:flex;justify-content:center;margin:1.5rem;border-radius:25px}.gallery-container .logements-gallery{display:grid;grid-template-columns:repeat(3, 1fr);gap:50px;max-width:1200px;width:100%;padding:15px}@media screen and (max-width: 768px){.gallery-container{padding:20px;margin:1rem}.gallery-container .logements-gallery{grid-template-columns:repeat(2, 1fr);gap:30px}}@media screen and (max-width: 480px){.gallery-container{padding:0px;margin:0rem}.gallery-container .logements-gallery{grid-template-columns:repeat(1, 1fr);gap:30px}}
