--- a/src/components/Cadre/cadre.css
+++ b/src/components/Cadre/cadre.css
@@ -1,26 +1,1 @@
-@charset "UTF-8";
-.logement-title {
-  position: absolute;
-  bottom: -1rem;
-  background-color: #FF6060;
-  color: #fff;
-  font-size: 14px;
-  width: 100%;
-  white-space: pre-wrap;
-  padding: 1.5rem;
-  border-radius: 0 0 10px 10px; /* Coins arrondis en bas */
-}
-
-.logement-item .image-container {
-  position: relative;
-  border-radius: 10px; /* Coins arrondis pour le conteneur */
-  overflow: hidden; /* Empêche le débordement du titre */
-  display: block; /* Pour que l’image prenne tout l’espace disponible */
-  height: 100%;
-}
-.logement-item .image-container .logement {
-  width: 100%;
-  height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover; /* Assure que l’image remplisse le conteneur */
-}/*# sourceMappingURL=cadre.css.map */
+.logement-title{position:absolute;bottom:-1rem;background-color:#ff6060;height:50px;color:#fff;font-size:14px;width:100%;display:flex;justify-content:flex-start;align-items:center;padding:.3rem;white-space:pre-wrap;border-radius:0 0 10px 10px}.logement-item .image-container{position:relative;border-radius:10px;overflow:hidden;display:block;height:100%}.logement-item .image-container .logement{width:100%;height:100%;-o-object-fit:cover;object-fit:cover}
