--- a/src/components/Cadre/cadre.scss
+++ b/src/components/Cadre/cadre.scss
@@ -6,12 +6,16 @@
     position: absolute;
     bottom: -1rem;
     background-color: #FF6060;
-    color:#fff;
-    font-size: 13px;
+    height: 50px;
+    color: #fff;
+    font-size: 14px;
     width: 100%;
-    
+    display: flex;
+    justify-content: flex-start;
+    align-items: center; /* This will center the text vertically */
+    padding: 0.3rem;
     white-space: pre-wrap;
-   padding: 1rem;
+   
  
     border-radius: 0 0 10px 10px; /* Coins arrondis en bas */
   
