fin-modification-projet-7

--- a/src/pages/Error/error.scss
+++ b/src/pages/Error/error.scss
@@ -6,6 +6,7 @@
       width: 600px;
       height: 265px;
     }
+  
   }
   
   .link-home {
@@ -15,7 +16,20 @@
     font-size: 18px;
     text-decoration: none;
     margin-top: 20px;
-  padding: 3rem;
+    padding: 3rem;
    text-decoration:underline;
   }
+  
+  @media screen and (max-width: 1120px) {
+    .item-error {
+    & img {
+      display: block;
+      margin: 65px auto;
+      width:190px;
+      height: 99px;
+    }
+  
+  }
+ 
+    }
   
