fin-modification-projet-7-2

--- a/src/components/Carrossal/carrossale.css
+++ b/src/components/Carrossal/carrossale.css
@@ -1,42 +1,1 @@
-@charset "UTF-8";
-.logement-page {
-  position: relative;
-}
-
-.logement-pictures {
-  position: relative;
-}
-
-.logement-picture {
-  width: 100%;
-  height: 400px; /* Ajustez la hauteur à votre convenance, par exemple 40% ou une valeur fixe comme 300px */
-  -o-object-fit: cover;
-     object-fit: cover;
-  transition: all 0.3s ease;
-}
-
-.arrow {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  cursor: pointer;
-  z-index: 10;
-}
-
-.arrow-left {
-  left: 10px; /* Ajustez la position à gauche */
-}
-
-.arrow-right {
-  right: 10px; /* Ajustez la position à droite */
-}
-
-.slide-picture {
-  position: absolute;
-  bottom: 10px; /* Positionnez le texte en bas */
-  left: 50%;
-  transform: translateX(-50%);
-  color: white; /* Couleur du texte */
-  padding: 5px 10px; /* Espacement autour du texte */
-  border-radius: 5px; /* Coins arrondis */
-}/*# sourceMappingURL=carrossale.css.map */
+.logement-page{position:relative}.logement-pictures{position:relative}.logement-picture{width:100%;height:400px;-o-object-fit:cover;object-fit:cover;transition:all .3s ease;border-radius:25px}.arrow{position:absolute;top:50%;transform:translateY(-50%);cursor:pointer;z-index:10;width:20px;height:20px;color:#fff}.arrow-left{left:10px}.arrow-right{right:10px}.slide-picture{position:absolute;bottom:10px;left:50%;transform:translateX(-50%);color:#fff;padding:5px 10px;border-radius:5px}@media screen and (max-width: 1120px){.logement-picture{width:100%;height:255px;-o-object-fit:cover;object-fit:cover;transition:all .3s ease;border-radius:10px}}
