--- a/src/components/Carrossal/carrossale.scss
+++ b/src/components/Carrossal/carrossale.scss
@@ -11,6 +11,7 @@
     height: 400px; /* Ajustez la hauteur à votre convenance, par exemple 40% ou une valeur fixe comme 300px */
     object-fit: cover;
     transition: all 0.3s ease;
+    border-radius: 25px;
   }
   
   .arrow {
@@ -19,6 +20,9 @@
     transform: translateY(-50%);
     cursor: pointer;
     z-index: 10;
+    width: 20px;
+    height: 20px;
+    color: #FFF;
   }
   
   .arrow-left {
@@ -39,4 +43,12 @@
     padding: 5px 10px; /* Espacement autour du texte */
     border-radius: 5px; /* Coins arrondis */
   }
-  
+  @media screen and (max-width: 1120px) {
+    .logement-picture {
+      width: 100%;
+      height: 255px; /* Ajustez la hauteur à votre convenance, par exemple 40% ou une valeur fixe comme 300px */
+      object-fit: cover;
+      transition: all 0.3s ease;
+      border-radius: 10px;
+    }
+  }
