--- a/src/components/Collapse/collapse.css
+++ b/src/components/Collapse/collapse.css
@@ -1,39 +1,1 @@
-.collapse {
-  border: 1px solid #ddd;
-  border-radius: 5px;
-  overflow: hidden;
-  margin: 1rem 0;
-}
-.collapse .collapse-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  cursor: pointer;
-  padding: 1rem;
-  background-color: var(--colorRed);
-  font-weight: bold;
-}
-.collapse .collapse-header h2 {
-  margin: 0;
-  color: #fff;
-}
-.collapse .collapse-header .toggle-arrow {
-  font-size: 1.5rem;
-  transition: transform 0.3s ease;
-}
-.collapse .collapse-header .arrow.expanded {
-  transform: rotate(180deg);
-}
-.collapse .collapse-content {
-  padding: 1rem;
-  background-color: #fafafa;
-  animation: fadeIn 0.4s ease-in-out;
-}
-@keyframes fadeIn {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}/*# sourceMappingURL=collapse.css.map */
+.collapse{border:1px solid #ddd;border-radius:10px;overflow:hidden}.collapse .collapse-header{display:flex;align-items:center;justify-content:space-between;cursor:pointer;-webkit-user-select:none;-moz-user-select:none;user-select:none;background-color:#ff6060;padding-left:.5rem;padding-right:.5rem}.collapse .collapse-header h2{color:#fff;font-size:18px}.collapse .collapse-header .toggle-arrow{width:20px;height:10px}.collapse .collapse-header .arrow.expanded{transform:rotate(180deg)}.collapse .collapse-content{padding:1rem;background-color:#fafafa;animation:fadeIn .4s ease-in-out}
