--- a/src/components/Cadre/cadre.scss
+++ b/src/components/Cadre/cadre.scss
@@ -15,7 +15,7 @@
     align-items: center; /* This will center the text vertically */
     padding: 0.3rem;
     white-space: pre-wrap;
-   
+    background: linear-gradient(to top, rgba(0, 0, 0, 0.8), transparent);
  
     border-radius: 0 0 10px 10px; /* Coins arrondis en bas */
   
