--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -1,21 +1,1 @@
-footer {
-  background-color: black;
-  padding: 20px;
-  color: white;
-  width: 100%;
-  height: 210px;
-}
-footer .footer-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 2rem;
-  padding-top: 60px;
-}
-footer .footer-container .logo-footer {
-  width: 122px;
-  filter: brightness(0) invert(1);
-}
-footer .footer-container p {
-  font-size: 20px;
-}/*# sourceMappingURL=footer.css.map */
+footer{background-color:#000;color:#fff;width:100%;height:210px}footer .footer-container{display:flex;flex-direction:column;align-items:center;justify-content:center;height:100%;gap:1rem;margin:0 auto}footer .logo-footer{width:122px;filter:brightness(0) invert(1)}footer p{font-size:20px;margin:10px 0 0}
