--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -27,6 +27,9 @@ header {
                     color: #000;
 
                 }
+                .active-link {
+                text-decoration: underline;
+                  }
             }
 
         }
