--- a/src/pages/Apropos/apropos.css
+++ b/src/pages/Apropos/apropos.css
@@ -1,1 +1,1 @@
-.apropos{display:flex;flex-direction:column;align-items:center;text-align:center}.apropos .apropos-content{width:90%;max-width:800px;margin:2rem auto}.apropos .apropos-content h1{font-size:2rem;margin-bottom:2rem;color:#333}.apropos .apropos-content .collapse{margin-bottom:1.5rem}
+.apropos{display:flex;flex-direction:column;align-items:center}.apropos .apropos-content{width:90%;max-width:800px;margin:1rem auto}.apropos .apropos-content h1{font-size:2rem;margin-bottom:2rem;color:#333}.apropos .apropos-content .collapse{margin-bottom:1.5rem}
