--- a/src/components/Cadre/cadre.scss
+++ b/src/components/Cadre/cadre.scss
@@ -8,7 +8,7 @@
     background-color: #FF6060;
     height: 50px;
     color: #fff;
-    font-size: 14px;
+    font-size: 18px;
     width: 100%;
     display: flex;
     justify-content: flex-start;
@@ -27,10 +27,10 @@
         border-radius: 10px; /* Coins arrondis pour le conteneur */
         overflow: hidden; /* Empêche le débordement du titre */
         display: block; /* Pour que l’image prenne tout l’espace disponible */
-height: 100%;
+         height: 100%;
         .logement {
             width: 100%;
-            height: 100%;
+             height: 300px;
             object-fit: cover; /* Assure que l’image remplisse le conteneur */
           }
       }
