--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -2,6 +2,7 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    gap:0.5rem;
     padding: 10px 20px;
     background-color: white;
 
@@ -25,6 +26,8 @@ header {
                 a {
                     text-decoration: none;
                     color: #000;
+                    font-weight: 400;
+                    font-size: 24px;
 
                 }
                 .active-link {
