--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,1 @@
-body {
-  font-family: "Roboto", sans-serif;
-  margin: 0;
-  padding: 0;
-}/*# sourceMappingURL=App.css.map */
+body{font-family:"Roboto",sans-serif;margin:0}.main-container{display:flex;flex-direction:column;gap:3rem;padding:4rem}
