--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,11 @@
 body {
     font-family: "Roboto", sans-serif;
     margin: 0;
-    padding: 0;
+}
+.main-container{
+    display: flex;
+    flex-direction: column;
+    gap: 3rem;
+
+    padding: 4rem;
 }
