--- a/src/components/Collapse/collapse.scss
+++ b/src/components/Collapse/collapse.scss
@@ -1,40 +1,47 @@
 .collapse {
-    border: 1px solid #ddd;
-    border-radius: 10px;
-    overflow: hidden;
+  border-radius: 10px;
+  overflow: hidden;
+  margin-bottom: 1rem; /* Ajoute de l'espace entre chaque collapse */
 
-  
-    .collapse-header {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      cursor: pointer;
-     
-      user-select: none;
-      background-color: #ff6060;
-      padding-left: 0.5rem;
-      padding-right: 0.5rem;
-  
-      h2 {
-        color: #fff;
-            font-size: 18px;
-      }
-  
-      .toggle-arrow {
-        width: 20px;
-        height: 10px;
-      }
-  
-      .arrow.expanded {
-        transform: rotate(180deg); // Fait tourner la flèche quand le contenu est affiché
-      }
-    }
-  
-    .collapse-content {
-      padding: 1rem;
-      background-color: #fafafa;
-      animation: fadeIn 0.4s ease-in-out;
-    }
+  .collapse-header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 3rem;
+    cursor: pointer;
+    border-radius: 5px;
+    user-select: none;
+    background-color: #ff6060;
+    color: #fff;
+    height: 50px;
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+    font-size: 15px;
+    font-weight: 500;
+    font-family: Montserrat;
 
+    img {
+      width: 20px;
+      height: 10px;
+    }
   }
+
+  .collapse-content {
   
+
+
+    li {
+      list-style: none;
+    }
+    p {
+      border-radius: 5px;
+      padding: 0.5rem;
+      margin-top: 0;
+
+      line-height: 2.5;
+      background-color: #fbf5f5;
+      color: #000000;
+    
+    }
+  }
+}
