--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -1,41 +1,39 @@
 header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    gap:0.5rem;
-    padding: 10px 20px;
-    background-color: white;
+  align-items: center;
+  display: flex;
+  flex-direction: row;
+  height: 4.25rem;
+  justify-content: space-between;
 
-    img.logo-header {
 
-        width: 100px;
-        object-fit: cover
-    }
 
-    nav {
-        ul {
-            list-style: none;
-            display: flex;
-            justify-content: space-between;
-            padding: 0;
-            margin: 0;
+  img.logo-header {
+    width: 100px;
+    object-fit: cover;
+  }
 
-            li {
-                margin: 0 10px;
+  nav {
+    ul {
+      list-style: none;
+      display: flex;
+      justify-content: space-between;
+      gap: 2rem;
+      padding: 0;
+      margin: 0;
 
-                a {
-                    text-decoration: none;
-                    color: #000;
-                    font-weight: 400;
-                    font-size: 24px;
+      li {
+   
 
-                }
-                .active-link {
-                text-decoration: underline;
-                  }
-            }
-
+        a {
+          text-decoration: none;
+          color: #000;
+          font-weight: 400;
+          font-size: 24px;
         }
-
+        .active-link {
+          text-decoration: underline;
+        }
+      }
     }
+  }
 }
