--- a/src/pages/Home/home.scss
+++ b/src/pages/Home/home.scss
@@ -2,51 +2,54 @@
   --colorRed: #ff6060;
   --colorWhite: #fff;
 }
+
 .home-container {
-display: flex;
-flex-direction: column;
-gap: 2rem;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+
   .gallery-container {
     position: relative;
     background-color: #f6f6f6;
-  
-  
     display: flex;
-    justify-content: center;
-  
+   
     border-radius: 25px;
 
     .logements-gallery {
       display: grid;
-      grid-template-columns: repeat(3, 1fr);
-      gap: 50px;
-      max-width: 1200px;
+      grid-template-columns: repeat(3, 1fr); /* 3 colonnes par défaut */
+    
+     padding: 3rem;
+     gap: 3rem;
       width: 100%;
-      padding: 15px;
+      
     }
   }
 }
 
+/* Écrans moyens (max-width: 768px) */
 @media screen and (max-width: 768px) {
- 
-
-  .gallery-container .logements-gallery {
-    grid-template-columns: repeat(
-      2,
-      1fr
-    ); 
-    gap: 30px; 
+  .home-container {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+  
+    .gallery-container {
+      position: relative;
+      background-color:#fff;
+      display: flex;
+      justify-content: center;
+      border-radius: 25px;
+  
+      .logements-gallery {
+      display: flex;
+      flex-direction: column;
+        gap: 50px;
+        max-width: 1200px;
+        width: 100%;
+        padding: 15px;
+      }
+    }
   }
 }
 
-@media screen and (max-width: 480px) {
-
-
-  .gallery-container .logements-gallery {
-    grid-template-columns: repeat(
-      1,
-      1fr
-    ); 
-    gap: 30px; 
-  }
-}
