--- a/src/App.scss
+++ b/src/App.scss
@@ -7,5 +7,14 @@ body {
     flex-direction: column;
     gap: 3rem;
 
-    padding: 4rem;
+    padding: 5rem;
+}
+@media screen and (max-width: 768px) {
+    .main-container{
+        display: flex;
+        flex-direction: column;
+        gap: 3rem;
+    
+        padding: 1rem;
+    }
 }
