--- a/src/components/Cadre/cadre.scss
+++ b/src/components/Cadre/cadre.scss
@@ -1,38 +1,43 @@
-
-  
-
-  
-  .logement-title {
-    position: absolute;
-    bottom: -1rem;
-    background-color: #FF6060;
-    height: 50px;
-    color: #fff;
-    font-size: 18px;
+.logement-item {
+  .image-container {
+    position: relative;
+    border-radius: 10px; /* Coins arrondis pour le conteneur */
+    overflow: hidden; /* Empêche le débordement du titre */
+    display: block; /* Permet à l’image de prendre tout l’espace disponible */
+    height: 360px;
     width: 100%;
-    display: flex;
-    justify-content: flex-start;
-    align-items: center; /* This will center the text vertically */
-    padding: 0.3rem;
-    white-space: pre-wrap;
-    background: linear-gradient(to top, rgba(0, 0, 0, 0.8), transparent);
- 
-    border-radius: 0 0 10px 10px; /* Coins arrondis en bas */
   
-  }
-  
-  .logement-item{
-    .image-container {
-        position: relative;
-        border-radius: 10px; /* Coins arrondis pour le conteneur */
-        overflow: hidden; /* Empêche le débordement du titre */
-        display: block; /* Pour que l’image prenne tout l’espace disponible */
-         height: 100%;
-        .logement {
-            width: 100%;
-             height: 240px;
-            object-fit: cover; /* Assure que l’image remplisse le conteneur */
-          }
-      }
 
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover; /* Assure que l’image remplisse le conteneur */
+    }
+.logement-titre{
+  position: absolute; /* Positionne sur toute la surface de l'image */
+  bottom: 0; /* Ancre l'élément au bas */
+  left: 0;
+  width: 100%;
+  padding: 10px; /* Ajoute un espacement interne pour le titre */
+  display: flex;
+  align-items: center; /* Centre verticalement le contenu */
+  justify-content: flex-start; /* Aligne le titre à gauche */
+  background: linear-gradient(to top, rgba(0, 0, 0, 0.8), transparent);
+  color: white; /* Texte en blanc */
+  border-radius: 0 0 10px 10px; /* Coins arrondis uniquement en bas */
+ 
+  h2 {
+    text-align: start;
+            color: white;
+            
+            z-index: 1;
+            font-size: 1.125rem;
+            font-weight: 500;
+            line-height: 142.6%;
+            width: 100%;
   }
+}
+  
+  }
+}
+
