--- a/src/pages/Apropos/apropos.scss
+++ b/src/pages/Apropos/apropos.scss
@@ -10,3 +10,17 @@
     margin: 0 5rem;
   }
 }
+@media screen and (max-width: 768px) {
+  .apropos-container{
+
+
+    display: flex;
+    flex-direction: column;
+    gap: 1.88rem;
+    color: #FF6060;
+  
+    .apropos-content{
+    margin: 0;
+    }
+  }
+}
