--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,1 @@
-body{font-family:"Roboto",sans-serif;margin:0}.main-container{display:flex;flex-direction:column;gap:3rem}@media screen and (max-width: 768px){.main-container{display:flex;flex-direction:column;gap:3rem;padding:1rem}}
+body{font-family:"Roboto",sans-serif;margin:0}.main-container{display:flex;flex-direction:column;gap:3rem;padding:3rem}@media screen and (max-width: 768px){.main-container{display:flex;flex-direction:column;padding:0rem}}
