--- a/src/components/Collapse/collapse.scss
+++ b/src/components/Collapse/collapse.scss
@@ -32,6 +32,8 @@
 
     li {
       list-style: none;
+      padding: 0.5rem;
+      background-color: #fbf5f5;
     }
     p {
       border-radius: 5px;
