--- a/src/components/Banner/banner.scss
+++ b/src/components/Banner/banner.scss
@@ -17,7 +17,7 @@
         width: 100%;
         height: 100%;
         border-radius: 25px;
-        background-color: #000;
+        background-color: #0000004d;
         opacity: 0.6; // Ajustez l'opacité pour plus ou moins de foncé
     }
 
